Improved Swagger documentation, model and validators
